# corepkg

./: .gitignore  COPYING  meson.build  meson_options.txt  pyproject.toml  run-pylint  testpath
closet/: README.md
closet/metadata/: layout.conf
closet/profiles/: categories
cnf/: METADATA  emoji-logging.sh  make.conf.example  make.globals  meson.build  repos.conf
cnf/bash/bashrc.d/: 1g4.sh
cnf/logrotate.d/: elog-save-summary
cnf/repo.postsync.d/: example
cnf/sets/: portage.conf
core-functions/: functions.sh  meson.build
core-functions/functions/: experimental.sh  rc.sh
elt-patches/: eltpatch.in  meson.build
eselect/: eselect  kernel-config  meson.build  profile-config  rc-config
eselect/libs/: core.bash  multilib.bash  package-manager.bash
eselect/modules/: editor.eselect  env.eselect  kernel.eselect  news.eselect  profile.eselect  visual.eselect
lib/: meson.build
lib/_emerge/: AbstractDepPriority.py  AbstractEbuildProcess.py  AbstractPollTask.py  AsynchronousLock.py  AsynchronousTask.py  AtomArg.py  Binpkg.py  BinpkgEnvExtractor.py  BinpkgExtractorAsync.py  BinpkgFetcher.py  BinpkgPrefetcher.py  BinpkgVerifier.py  BlockerCache.py  BlockerDB.py  CompositeTask.py  Dependency.py  EbuildBinpkg.py  EbuildBuild.py  EbuildBuildDir.py  EbuildExecuter.py  EbuildFetcher.py  EbuildFetchonly.py  EbuildIpcDaemon.py  EbuildMerge.py  EbuildMetadataPhase.py  EbuildPhase.py  EbuildProcess.py  FakeVartree.py  FifoIpcDaemon.py  JobStatusDisplay.py  MergeListItem.py  MetadataRegen.py  MiscFunctionsProcess.py  Package.py  PackageArg.py  PackageMerge.py  PackagePhase.py  PackageUninstall.py  PackageVirtualDbapi.py  PipeReader.py  (+28 more)
lib/_emerge/resolver/: circular_dependency.py  output.py  output_helpers.py  package_tracker.py  slot_collision.py
lib/corepkg/: _legacy_globals.py  _selinux.py  checksum.py  const.py  cvstree.py  debug.py  eapi.py  eclass_cache.py  glsa.py  gpkg.py  locks.py  mail.py  manifest.py  meson.build  module.py  news.py  output.py
lib/corepkg/_compat_upgrade/: binpkg_multi_instance.py  meson.build  one_off_runner.py
lib/corepkg/_compat_upgrade/one_off/: 20260305_drop_eselect_vdb.py  20260305_drop_legacy_split_packages_vdb.py  20260305_normalize_corepkg_config_layout.py  20260305_prune_unowned_legacy_paths.py  20260305_transition_portage_to_corepkg.py  README.md  __init__.py
lib/corepkg/_emirrordist/: Config.py  FetchTask.py  meson.build
lib/corepkg/_sets/: ProfilePackageSet.py  __init__.py  dbapi.py  security.py  shell.py
lib/corepkg/binrepo/: config.py  meson.build
lib/corepkg/cache/: cache_errors.py  ebuild_xattr.py  flat_hash.py  meson.build  sql_template.py  template.py  volatile.py
lib/corepkg/dbapi/: DummyTree.py  IndexedVardb.py  _VdbMetadataDelta.py  _expand_new_virt.py  cpv_expand.py  dep_expand.py  meson.build  porttree.py  vartree.py
lib/corepkg/dep/: libc.py
lib/corepkg/dep/soname/: meson.build  multilib_category.py  parse.py
lib/corepkg/elog/: __init__.py  mod_echo.py  mod_mail_summary.py  mod_save_summary.py  mod_syslog.py
lib/corepkg/emaint/: main.py
lib/corepkg/env/: loaders.py  meson.build  validators.py
lib/corepkg/package/: meson.build
lib/corepkg/package/ebuild/: _spawn_nofetch.py  config.py  deprecated_profile_check.py  doebuild.py  fetch.py  getmaskingstatus.py  meson.build
lib/corepkg/repository/: config.py
lib/corepkg/repository/storage/: inplace.py
lib/corepkg/sync/: config_checks.py  controller.py  meson.build  old_tree_timestamp.py  revision_history.py
lib/corepkg/sync/modules/: meson.build
lib/corepkg/tests/: conftest.py  meson.build
lib/corepkg/tests/dbapi/: meson.build  test_auxdb.py  test_bintree_build_id.py  test_fakedbapi.py  (+2 more)
lib/corepkg/tests/emerge/: meson.build  test_actions.py  test_baseline.py  test_composite_task.py  test_emerge_blocker_file_collision.py  test_libc_dep_inject.py  test_package_virtual_dbapi.py
lib/corepkg/tests/env/config/: __init__.py  meson.build  test_CorepkgModulesFile.py  test_PackageKeywordsFile.py  test_PackageUseFile.py
lib/corepkg/util/: ExtractKernelVersion.py  _desktop_entry.py  _path.py  _urlopen.py  _xattr.py  bin_entry_point.py  changelog.py  compression_probe.py  configparser.py  corepkg_lru_cache.py  digraph.py  install_mask.py  lafilefixer.py  listdir.py  meson.build  mtimedb.py  path.py  socks5.py  whirlpool.py
lib/corepkg/xml/: metadata.py
lib/portage/: __init__.py  _global_updates.py  binpkg.py  checksum.py  const.py  data.py  dispatch_conf.py  exception.py  getbinpkg.py  gpg.py  gpkg.py  installation.py  localization.py  metadata.py  output.py  process.py  progress.py  update.py  versions.py  xpak.py
lib/portage/_compat_upgrade/: binpkg_compression.py  binpkg_format.py  default_locations.py  meson.build
lib/portage/_emirrordist/: ContentDB.py  DeletionIterator.py  DeletionTask.py  FetchIterator.py  MirrorDistTask.py  main.py
lib/portage/_sets/: base.py  files.py  libs.py  meson.build  profiles.py
lib/portage/cache/: anydbm.py  fs_template.py  metadata.py  sqlite.py
lib/portage/dbapi/: IndexedPortdb.py  _MergeProcess.py  _SyncfsProcess.py  __init__.py  _similar_name_search.py  bintree.py  porttree.py  virtual.py
lib/portage/dep/: __init__.py  _slot_operator.py  dep_check.py  meson.build
lib/portage/elog/: meson.build  messages.py  mod_custom.py  mod_mail.py  mod_save.py
lib/portage/emaint/: meson.build
lib/portage/env/: config.py
lib/portage/proxy/: lazyimport.py  meson.build
lib/portage/repository/: config.py  meson.build
lib/portage/sync/: __init__.py  syncbase.py
lib/portage/tests/: __init__.py
lib/portage/util/: __init__.py  _compare_files.py  _get_vm_info.py  _info_files.py  _pty.py  env_update.py  hooks.py  locale.py  meson.build  movefile.py  writeable_check.py
lib/portage/xml/: meson.build
man/: color.map.5  corepkg.5  dispatch-conf.1  ebuild.1  ebuild.5  egencache.1  emaint.1  emerge.1  emirrordist.1  env-update.1  etc-update.1  fixpackages.1  glsa-check.1  make.conf.5  meson.build  portage.5  quickpkg.1  xpak.5
misc/: run-tests-local.sh
src/: meson.build  portage_util__whirlpool.c
(+384 files in other folders)
