option('system-wide', type : 'boolean', value : true,
    description : 'Install system-wide rather than isolated inside a Python environment'
)

option('eprefix', type : 'string',
    description : 'Prefix directory for Corepkg to operate under'
)

option('corepkg-base', type : 'string',
    description : 'Corepkg installation base directory'
)

option('corepkg-bindir', type : 'string',
    description : 'Internal Corepkg executables directory'
)

option('corepkg-datadir', type : 'string',
    description : 'Data files directory'
)

option('docdir', type : 'string',
    description : 'Documentation directory'
)

option('doc', type : 'boolean', value : false,
    description : 'Build and install documentation'
)

option('doc-formats', type : 'array', choices : ['xhtml', 'xhtml-nochunks'],
    description : 'Documentation formats to build'
)

option('apidoc', type : 'boolean', value : false,
    description : 'Build and install API documentation'
)

option('install-tests', type : 'boolean', value : false,
    description : 'Install the Python test modules'
)

option('native-extensions', type : 'boolean', value : true,
    description : 'Build and install the native extensions for better performance'
)

option('gentoo-dev', type : 'boolean', value : false,
    description : 'Enable features required for Gentoo ebuild development'
)

option('ipc', type : 'boolean', value : true,
    description : 'Use inter-process communication between Corepkg and running ebuilds'
)

option('rsync-verify', type : 'boolean', value : true,
    description : 'Enable full-tree cryptographic verification of Gentoo repository rsync checkouts'
)

option('xattr', type : 'boolean', value : false,
    description : 'Preserve extended attributes when installing files'
)
