[project]
name = 'corepkg'
dynamic = ['version']
description = 'Corepkg is the package management and distribution system for Gentoo'
requires-python = '>=3.9'
license = {file = "LICENSE"}
authors = [
  {name = 'Gentoo Corepkg Development Team', email = 'dev-corepkg@gentoo.org'},
]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
# To get a pure wheel:
# python -m build --wheel -Csetup-args="-Dnative-extensions=false"
setup = ['-Dsystem-wide=false']

[project.scripts]
archive-conf = 'corepkg.util.bin_entry_point:bin_entry_point'
dispatch-conf = 'corepkg.util.bin_entry_point:bin_entry_point'
ebuild = 'corepkg.util.bin_entry_point:bin_entry_point'
egencache = 'corepkg.util.bin_entry_point:bin_entry_point'
emaint = 'corepkg.util.bin_entry_point:bin_entry_point'
emerge = 'corepkg.util.bin_entry_point:bin_entry_point'
emirrordist = 'corepkg.util.bin_entry_point:bin_entry_point'
env-update = 'corepkg.util.bin_entry_point:bin_entry_point'
fixpackages = 'corepkg.util.bin_entry_point:bin_entry_point'
glsa-check = 'corepkg.util.bin_entry_point:bin_entry_point'
gpkg-sign = 'corepkg.util.bin_entry_point:bin_entry_point'
corepkgq = 'corepkg.util.bin_entry_point:bin_entry_point'
quickpkg = 'corepkg.util.bin_entry_point:bin_entry_point'
regenworld = 'corepkg.util.bin_entry_point:bin_entry_point'

[tool.pytest.ini_options]
markers = [
    "ft: functional tests (select: '-m ft'; deselect with '-m \"not ft\"')",
    "stress: stress tests (select: '-m stress'; deselect with '-m \"not stress\"')",
    "unit: unit tests (select: '-m unit'; deselect with '-m \"not unit\"')",
]
