install_data(
    'functions.sh',
    install_dir : 'lib/corepkg/functions'
)

install_subdir(
    'functions',
    install_dir : 'lib/corepkg/functions'
)

executable(
    'consoletype',
    'consoletype.c',
    install : true
)

executable(
    'shquote',
    'shquote.c',
    install : true
)

install_man(
    'consoletype.1',
)
