py.install_sources(
    [
        'Config.py',
        'ContentDB.py',
        'DeletionIterator.py',
        'DeletionTask.py',
        'FetchIterator.py',
        'FetchTask.py',
        'MirrorDistTask.py',
        'main.py',
        '__init__.py',
    ],
    subdir : 'corepkg/_emirrordist',
    pure : not native_extensions
)
