py.install_sources(
    [
        'test_actions.py',
        'test_binpkg_fetch.py',
        'test_config_protect.py',
        'test_emerge_blocker_file_collision.py',
        'test_emerge_slot_abi.py',
        'test_global_updates.py',
        'test_baseline.py',
        'test_libc_dep_inject.py',
        'test_unsupported_eapi.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'corepkg/tests/emerge',
    pure : not native_extensions
)
