py.install_sources(
    [
        'test_PackageKeywordsFile.py',
        'test_PackageMaskFile.py',
        'test_PackageUseFile.py',
        'test_CorepkgModulesFile.py',
        '__init__.py',
        '__test__.py',
    ],
    subdir : 'corepkg/tests/env/config',
    pure : not native_extensions
)
